fixed nav bar on mobile only

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -225,7 +225,7 @@ textarea {
 .noUi-target,
 .noUi-target * {
   -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-user-select: none;
   -ms-touch-action: none;
   touch-action: none;
@@ -597,6 +597,9 @@ nav {
   margin-left: 30px;
   margin-right: 30px; }
 
+.navbar-fixed {
+  z-index: 998; }
+
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
@@ -604,7 +607,6 @@ nav {
   src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.0.46") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.0.46") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.0.46") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.0.46") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.0.46#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 .mdi:before,
 .mdi-set {
   display: inline-block;
@@ -6965,7 +6967,6 @@ nav {
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg); } }
-
 @keyframes mdi-spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -6973,7 +6974,6 @@ nav {
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg); } }
-
 #share a {
   position: fixed;
   top: 50vh;
@@ -6983,76 +6983,58 @@ nav {
   border-radius: 50%;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out; }
-
 #share a.hidden {
   visibility: hidden; }
-
 #share a:last-child {
   padding: 8px 15px; }
-
 #share a:nth-child(1) {
   background-color: #73b4ff;
   padding: 8px 15px; }
-
 #share a:nth-child(1).show {
   -webkit-transform: rotate(60deg) translate(-110px) rotate(-60deg);
   transform: rotate(60deg) translate(-110px) rotate(-60deg); }
-
 #share a:nth-child(2) {
   background-color: #3B5998;
   padding: 8px 15px; }
-
 #share a:nth-child(2).show {
   -webkit-transform: rotate(20deg) translate(-110px) rotate(-20deg);
   transform: rotate(20deg) translate(-110px) rotate(-20deg); }
-
 #share a:nth-child(3) {
   background-color: #007bb6;
   padding: 8px 15px; }
-
 #share a:nth-child(3).show {
   -webkit-transform: rotate(-20deg) translate(-110px) rotate(20deg);
   transform: rotate(-20deg) translate(-110px) rotate(20deg); }
-
 #share a:nth-child(4) {
   background-color: gray;
   padding: 8px 15px; }
-
 #share a:nth-child(4).show {
   -webkit-transform: rotate(-60deg) translate(-110px) rotate(60deg);
   transform: rotate(-60deg) translate(-110px) rotate(60deg); }
-
 #share .mobile a {
   top: 90vh;
   right: 2vh; }
-
 #share .mobile a:nth-child(1).show {
   -webkit-transform: rotate(90deg) translate(-100px) rotate(-100deg);
   transform: rotate(90deg) translate(-100px) rotate(-100deg); }
-
 #share .mobile a:nth-child(2).show {
   -webkit-transform: rotate(60deg) translate(-100px) rotate(-60deg);
   transform: rotate(60deg) translate(-100px) rotate(-60deg); }
-
 #share .mobile a:nth-child(3).show {
   -webkit-transform: rotate(30deg) translate(-100px) rotate(-30deg);
   transform: rotate(30deg) translate(-100px) rotate(-30deg); }
-
 #share .mobile a:nth-child(4).show {
   -webkit-transform: rotate(0deg) translate(-100px) rotate(0deg);
   transform: rotate(0deg) translate(-100px) rotate(0deg); }
 
 #home h1 {
   color: white;
-
   margin-top: 15%; }
-
 #home #searchBar {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)); }
   #home #searchBar input {
     color: white;
     text-align: center; }
-
 #home .presentation {
   margin-top: 30px;
   margin-bottom: 30px; }
@@ -7069,10 +7051,8 @@ nav {
   #home .presentation p {
     text-align: justify;
     margin-top: 20px; }
-
 #home .homesearch {
   height: 70vh; }
-
 
 @media (max-width: 400px) {
   #results h1 {
@@ -7081,26 +7061,21 @@ nav {
     font-size: x-large;
     margin-top: 5%;
     margin-bottom: 8%; }
+
   nav .nav-wrapper {
     margin-left: 0;
     margin-right: 0; } }
-
 #results h1 {
   margin-bottom: 4%; }
-
 #results .card-image {
   margin: auto 0;
   right: 0; }
-
 #results .card-content {
   padding: 10px 24px; }
-
 #results .card-action {
   padding-bottom: 0; }
-
 #results .pagination {
   margin-bottom: 40px; }
-
 #results h2 {
   text-align: center;
   margin-bottom: 20px;
@@ -7108,18 +7083,8 @@ nav {
 
 #software h1 {
   margin-top: 8%; }
-
 #software table {
   margin-top: 5%; }
-
-
-#tags .logicielTagView {
-  margin-top: 20px; }
-
-#tags h2 {
-  font-size: xx-large;
-  margin-top: 10px; }
-
 
 #mentions-legales {
   text-align: justify; }
@@ -7148,15 +7113,6 @@ nav {
 .contact {
   margin-top: 20px; }
 
-
-#tags .logicielTagView {
-  margin-top: 20px; }
-
-#tags h2 {
-  font-size: xx-large;
-  margin-top: 10px; }
-
-
 @media (max-width: 400px) {
   #results h1 {
     margin-top: 8%; }
@@ -7164,10 +7120,10 @@ nav {
     font-size: x-large;
     margin-top: 5%;
     margin-bottom: 8%; }
+
   nav .nav-wrapper {
     margin-left: 0;
     margin-right: 0; } }
-
 @media (min-width: 400px) and (max-width: 1024px) {
   #results h1 {
     text-align: center;
@@ -7176,7 +7132,6 @@ nav {
     font-size: x-large;
     margin-top: 5%;
     margin-bottom: 5%; } }
-
 #table {
   min-height: 100vh; }
 
@@ -7195,4 +7150,3 @@ body {
     min-height: 100vh; }
 
 /*# sourceMappingURL=main.css.map */
-
