--- a/web/assets/sass/partials/Components/_nav.scss
+++ b/web/assets/sass/partials/Components/_nav.scss
@@ -30,3 +30,7 @@ nav {
   margin-left: 30px;
   margin-right: 30px;
 }
+
+.navbar-fixed{
+  z-index: 998;
+}
